# OGhidra

./: .env  LICENSE  LICENSE-BSD  README.md  ai_ghidra_capabilities.txt  config_template.env  main.py  pyproject.toml  requirements.txt
OGhidraMCP/: build.gradle
OGhidraMCP/src/main/java/com/lauriewired/: GhidraMCPPlugin.java
src/: bridge.py  bridge_mcp_ghidra.py  command_parser.py  config.py  ghidra_client.py  ghidra_mcp_client.py  ollama_client.py  session_utils.py  ui.py
src/cag/: manager.py
src/models/: memory.py
