[project]
name = "oghidra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3,<3.1",
    "httpx>=0.24.0",
    "ijson>=3.2.0", # for streaming large JSON files (large sessions)
    "numpy>=1.24.0", # Required: for vector operations with Ollama embeddings
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.0",
    "requests>=2.26.0",
    "rich>=13.7.1", # For enhanced terminal output in interactive mode
    "ttkbootstrap>=1.10.0", # Modern dark themes with rounded corners for UI
]
